--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@fortawesome/fontawesome-free": "5.13.0",
+    "@reduxjs/toolkit": "1.3.2",
+    "@testing-library/jest-dom": "5.3.0",
+    "@testing-library/react": "10.0.2",
+    "@testing-library/react-hooks": "3.2.1",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "0.19.2",
+    "husky": "4.2.3",
+    "lint-staged": "10.1.1",
+    "moment": "2.24.0",
+    "node-sass": "4.13.1",
+    "prettier": "2.0.2",
+    "prop-types": "15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.1",
+    "react-test-renderer": "16.13.1",
+    "redux": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +44,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
