--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "10.0.2",
     "@testing-library/react-hooks": "3.2.1",
     "@testing-library/user-event": "^7.1.2",
+    "graphql": "15.0.0",
     "husky": "4.2.3",
     "lint-staged": "10.1.1",
     "moment": "2.24.0",
