--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "license": "UNLICENSED",
   "dependencies": {
+    "cors": "2.8.5",
     "nexus": "0.20.0-next.44",
     "nexus-plugin-prisma": "0.7.0"
   },
@@ -17,6 +18,7 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@types/cors": "2.8.6",
     "prettier": "2.0.4"
   }
 }
