Attempt to generate on the server

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "format": "npx prettier --write './**/*.{ts,md}'",
     "dev": "nexus dev",
     "build": "nexus build",
-    "start": "node node_modules/.build"
+    "start": "node node_modules/.build",
+    "heroku-postbuild": "yarn prisma generate"
   },
   "prettier": {
     "semi": false,
