--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.0.0-beta.43",
+    "@auth0/auth0-spa-js": "1.7.0",
     "@fortawesome/fontawesome-free": "5.13.0",
     "@testing-library/jest-dom": "5.3.0",
     "@testing-library/react": "10.0.2",
     "@testing-library/react-hooks": "3.2.1",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-link-context": "1.0.20",
     "graphql": "15.0.0",
     "husky": "4.2.3",
     "lint-staged": "10.1.1",
