--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@apollo/client": "3.0.0-beta.43",
     "@auth0/auth0-spa-js": "1.7.0",
     "@fortawesome/fontawesome-free": "5.13.0",
+    "@material-ui/core": "4.9.12",
+    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "5.3.0",
     "@testing-library/react": "10.0.2",
     "@testing-library/react-hooks": "3.2.1",
